# opamp-server-py

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
.config/: otel-collector-config.yaml
opamp_server_py/: __init__.py  __main__.py
opamp_server_py/types/: anyvalue_p2p.py  anyvalue_pb2.py  opamp_p2p.py  opamp_pb2.py
opamp_server_py/types/opamp/: proto.py
opamp_server_py/utils/: clients.py  proto.py
specs/: .generate_types.sh
tests/: proto_test.py
